k8s/psql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-depl
  template:
    metadata:
      labels:
        app: psql-depl
    spec:
      containers:
      - name: psql-depl
        image: docker.io/hilbertshotel/psql
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: psql-svc
spec:
  selector:
    app: psql-depl
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
